Added streaming task output, Added Download/Upload .NET Core Tasks
