# Covenant/API/openapi.json
@@ -147,6 +147,41 @@
         }
       }
     },
+    "/api/commandoutputs/append/{id}": {
+      "put": {
+        "tags": [
+          "CommandOutputApi"
+        ],
+        "operationId": "AppendCommandOutput",
+        "consumes": [
+          "application/json-patch+json",
+          "application/json",
+          "text/json",
+          "application/*+json"
+        ],
+        "parameters": [
+          {
+            "in": "path",
+            "name": "id",
+            "required": true,
+            "type": "integer",
+            "format": "int32"
+          },
+          {
+            "in": "body",
+            "name": "body",
+            "schema": {
+              "type": "string"
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "Success"
+          }
+        }
+      }
+    },
     "/api/users": {
       "get": {
         "tags": [
